# mini-word

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
benches/: benchmarks.rs
src/: lib.rs  main.rs
src/document/: block.rs  mod.rs  paragraph.rs  rope.rs
src/editing/: cursor.rs  mod.rs  operation.rs
src/layout/: engine.rs  font.rs  line_break.rs  mod.rs  pagination.rs
src/render/: diff.rs  display.rs  mod.rs
src/undo/: mod.rs
src/wasm/: flat_buffer.rs  mod.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  fontService.ts  index.css  renderDecoder.ts
